mudanca de texto nao e mais tao simples

--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="card">
         <h1>Olá!</h1>
-        <p>Esta é uma página simples com um texto.</p>
+        <p>Esta nao mais uma pagina tão simples.</p>
     </div>
 </body>
 </html>
